--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
   </fieldset>
 
   <fieldset>
-    <legend>2. Person with Disability Number </legend>
-    <input type="number" name="age" required min="0" max="120">
-    <input type="number" name="age" min="0" max="120">
+    <legend>2. Person with Disability Number (RR-PPMM-BBB-NNNNNNN)</legend>
+    <input type="text" name="pwd_number" placeholder="Enter PWD Number" required />
   </fieldset>
 
   <fieldset>
